--- a/opening.html
+++ b/opening.html
@@ -76,6 +76,7 @@
   <button id="controlButton">Pause</button>
 
   <script src="backsound.js"></script>
+  <h1 class="disclaimer">*Jika lagu berhenti terputar tekan tombol pause</h1>
 </body>
 
 </html>
