--- a/calendar.html
+++ b/calendar.html
@@ -91,7 +91,7 @@
     </div>
     <div class="calendarbutton" data-aos="zoom-in-down" data-aos-easing="linear" data-aos-duration="1900">
       <button type="button" onclick="openCalendar()">
-        <a href="https://calendar.google.com/calendar/u/0/share?slt=1AYBHKjqFrrLmhCXuPlGTyUAJtxi9_oiKDMbSnuzm5ojkyJzURIJcGmV8Tzf6xzQ7AoX-6PebWbXCUw" style="text-decoration: none">
+        <a href="https://calendar.app.google/CiEawPRgpL26BmQg6" style="text-decoration: none">
           <img src="assets/mail.png" alt="" />
           ADD TO CALENDAR
         </a>
