--- a/dresscode.html
+++ b/dresscode.html
@@ -25,6 +25,12 @@
 </head>
 
 <body>
+    <!-- backsound -->
+  <audio id="audioPlayer" autoplay loop>
+    <source src="assets/backsound.mp3" type="audio/mpeg">
+  </audio>
+  <script src="backsound.js"></script>
+
   <div class="navbar-container">
     <div class="navbar">
       <ul>
