--- a/dresscode.html
+++ b/dresscode.html
@@ -26,6 +26,7 @@
 
 <body>
     <!-- backsound -->
+    <button id="controlButton">Pause</button>
   <audio id="audioPlayer" autoplay loop>
     <source src="assets/backsound.mp3" type="audio/mpeg">
   </audio>
