--- a/dresscode.html
+++ b/dresscode.html
@@ -25,12 +25,7 @@
 </head>
 
 <body>
-    <!-- backsound -->
-    <button id="controlButton">Pause</button>
-  <audio id="audioPlayer" autoplay loop>
-    <source src="assets/backsound.mp3" type="audio/mpeg">
-  </audio>
-  <script src="backsound.js"></script>
+  <button id="controlButton">Pause</button>
 
   <div class="navbar-container">
     <div class="navbar">
@@ -86,8 +81,9 @@
                 <b> Diwajibkan : </b>Kenakan pakaian dengan meriah, berwarna lembut atau colorful.
                 Kombinasikan dengan aksesoris untuk membuat tampilan lebih Elegant.
                 <br />
-                <br /> <b>Dilarang :</b> berpakaian lilac atau ungu
-                Berikuat adalah contoh palet warna yang direkomendasikan
+                <br /> <b>Dilarang :</b> berpakaian ungu atau hita,
+                <br>
+                Berikut adalah contoh palet warna yang direkomendasikan
               </p>
               <img src="assets/colorpalet.png" class="palet" alt="" class="calendarbutton" data-aos="fade-up"
                 data-aos-easing="linear" data-aos-duration="1800" />
@@ -101,14 +97,14 @@
             <img src="assets/dresscode1.png" alt="" />
           </div>
           <div class="kotak1">
-            <h2>WOMEN DRESSCODE</h2>
+            <h2>WOMEN ACCESSORIESS</h2>
             <p>Glamour ,Bright color , Elegant</p>
             <p></p>
-            <img src="assets/womendresscode.png" alt="" />
+            <img src="assets/womenaccessories.png" alt="" />
           </div>
           <div class="kotak1">
             <h2>MEN DRESSCODE</h2>
-            <p>Stylish , Casual ,Formal </p>
+            <p>Stylish ,Formal </p>
             <img src="assets/mendresscode.png" alt="" />
           </div>
         </div>
@@ -131,6 +127,11 @@
 
   <!-- aos -->
   <!-- backsound -->
+  <audio id="audioPlayer" autoplay loop>
+    <source src="assets/backsound.mp3" type="audio/mpeg">
+  </audio>
+  <script src="backsound.js"></script>
+
   <script src="dresscode.js"></script>
 </body>
 
