--- a/dresscode.html
+++ b/dresscode.html
@@ -81,7 +81,7 @@
                 <b> Diwajibkan : </b>Kenakan pakaian dengan meriah, berwarna lembut atau colorful.
                 Kombinasikan dengan aksesoris untuk membuat tampilan lebih Elegant.
                 <br />
-                <br /> <b>Dilarang :</b> berpakaian ungu atau hita,
+                <br /> <b>Dilarang :</b> berpakaian ungu atau hitam
                 <br>
                 Berikut adalah contoh palet warna yang direkomendasikan
               </p>
