--- a/submit.html
+++ b/submit.html
@@ -85,6 +85,21 @@
         <p>Dewi: "Semoga ulang tahunmu membawa kebahagiaan yang tak terhingga. Selamat ulang tahun!"
         </p>
       </div> 
+       <div class="wish-box">
+        <img src="assets/Avatar/avatar (5).png" alt="">
+        <p>Fitri: "Selamat ulang tahunnnn!!"
+        </p>
+      </div> 
+      <div class="wish-box">
+        <img src="assets/Avatar/avatar (1).png" alt="">
+        <p>Sinta: "hari ini spesial banget buat kamu! Semoga semua impianmu terwujud dan harimu dipenuhi dengan cinta dan tawa. Selamat ulang tahun!"
+        </p>
+      </div> 
+      <div class="wish-box">
+        <img src="assets/Avatar/avatar (2).png" alt="">
+        <p>Risky : "HBD WOIIIIII"
+        </p>
+      </div> 
       
     </div>
   </section>
