--- a/submit.html
+++ b/submit.html
@@ -75,24 +75,15 @@
           <button type="submit">Kirim</button>
         </form>
       </div>
-      <div class="wish-box">
-        <img src="assets/Avatar/avatar (3).png" alt="">
-        <p>Citra: "Hari spesialmu tiba lagi, semoga dipenuhi dengan cinta dan tawa. Selamat ulang tahun!"
-        </p>
-      </div>
+  
       <div class="wish-box">
         <img src="assets/Avatar/avatar (4).png" alt="">
-        <p>Dewi: "Semoga ulang tahunmu membawa kebahagiaan yang tak terhingga. Selamat ulang tahun!"
+        <p>Dewi: "Panjang umur sisss! Selamat ulang tahun!"
         </p>
       </div> 
        <div class="wish-box">
         <img src="assets/Avatar/avatar (5).png" alt="">
         <p>Fitri: "Selamat ulang tahunnnn!!"
-        </p>
-      </div> 
-      <div class="wish-box">
-        <img src="assets/Avatar/avatar (1).png" alt="">
-        <p>Sinta: "hari ini spesial banget buat kamu! Semoga semua impianmu terwujud dan harimu dipenuhi dengan cinta dan tawa. Selamat ulang tahun!"
         </p>
       </div> 
       <div class="wish-box">
