--- a/home.html
+++ b/home.html
@@ -95,14 +95,15 @@
         </video>
         <div class="overlay"></div>
       </div>
-      <div
+<!--       <div
         class="g"
         data-aos="fade-down"
         data-aos-easing="linear"
         data-aos-duration="1200"
       >
         <h1>G</h1>
-      </div>
+      </div> -->
+      
       <div class="logotext">
         <p
           style="font-size: 15px"
@@ -110,7 +111,7 @@
           data-aos-easing="linear"
           data-aos-duration="1200"
         >
-          BIRTHDAY OF
+          SWEET SEVENTEEN 
         </p>
         <h1
           data-aos="zoom-in-up"
