--- a/home.html
+++ b/home.html
@@ -95,14 +95,14 @@
         </video>
         <div class="overlay"></div>
       </div>
-<!--       <div
+      <div
         class="g"
         data-aos="fade-down"
         data-aos-easing="linear"
         data-aos-duration="1200"
       >
-        <h1>G</h1>
-      </div> -->
+        <h1>17</h1>
+      </div>
       
       <div class="logotext">
         <p
